# transformed-ideation

./: .gitignore  .gitmodules  Attributions.md  README.md
app/: main.py  schemas.py  try_qa.py
backend/: main.py  pipelines.py  pyproject.toml  readFromFile.py  schemas.py  test.py  test.txt
backend/app/: config.py  main.py  transformer.py
backend/app/routers/: api.py
backend/static/css/: bulma-divider.css  main.css
backend/static/js/: index.js
backend/templates/: form.html  index.html
transformers/: index.html  package-lock.json  package.json
transformers/css/: bulma-divider.css  flip.css  main.css  scrolling.css
transformers/js/: index.js
