[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nonameentered <matthewshu88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
FastAPI = "^0.63.0"
uvicorn = "^0.13.4"
python-multipart = "^0.0.5"
newspaper3k = "^0.2.8"
aiofiles = "^0.6.0"
Jinja2 = "^2.11.3"
lxml = "^4.6.2"
python-docx = "^0.8.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
